// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`npm publish > '@jsxstyle/astro' only publishes the intended files 1`] = `
"
@jsxstyle/astro
===============
- package.json
- src/astro.d.ts
- src/augment-types.d.ts
- src/components/Box.astro
- src/components/Col.astro
- src/components/Grid.astro
- src/components/Row.astro
- src/index.ts
- src/integration.ts
- src/middleware.ts
- src/types.ts
"
`;

exports[`npm publish > '@jsxstyle/bundler-utils' only publishes the intended files 1`] = `
"
@jsxstyle/bundler-utils
=======================
- lib/DependencyAnalysisCache.d.ts
- lib/DependencyAnalysisCache.d.ts.map
- lib/DependencyAnalysisCache.js
- lib/DependencyAnalysisCache.js.map
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/types.d.ts
- lib/types.d.ts.map
- lib/types.js
- lib/types.js.map
- lib/validation.d.ts
- lib/validation.d.ts.map
- lib/validation.js
- lib/validation.js.map
- lib/wrapFileSystem.d.ts
- lib/wrapFileSystem.d.ts.map
- lib/wrapFileSystem.js
- lib/wrapFileSystem.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/core' only publishes the intended files 1`] = `
"
@jsxstyle/core
==============
- README.md
- lib/addStyleToHead.d.ts
- lib/addStyleToHead.d.ts.map
- lib/addStyleToHead.js
- lib/addStyleToHead.js.map
- lib/componentStyles.d.ts
- lib/componentStyles.d.ts.map
- lib/componentStyles.js
- lib/componentStyles.js.map
- lib/createClassNameGetter.d.ts
- lib/createClassNameGetter.d.ts.map
- lib/createClassNameGetter.js
- lib/createClassNameGetter.js.map
- lib/createRequestStyleCache.d.ts
- lib/createRequestStyleCache.d.ts.map
- lib/createRequestStyleCache.js
- lib/createRequestStyleCache.js.map
- lib/dangerousStyleValue.d.ts
- lib/dangerousStyleValue.d.ts.map
- lib/dangerousStyleValue.js
- lib/dangerousStyleValue.js.map
- lib/generateCustomPropertiesFromVariants.d.ts
- lib/generateCustomPropertiesFromVariants.d.ts.map
- lib/generateCustomPropertiesFromVariants.js
- lib/generateCustomPropertiesFromVariants.js.map
- lib/getStringHash.d.ts
- lib/getStringHash.d.ts.map
- lib/getStringHash.js
- lib/getStringHash.js.map
- lib/getStyleCache.d.ts
- lib/getStyleCache.d.ts.map
- lib/getStyleCache.js
- lib/getStyleCache.js.map
- lib/getVariantSwitcher.d.ts
- lib/getVariantSwitcher.d.ts.map
- lib/getVariantSwitcher.js
- lib/getVariantSwitcher.js.map
- lib/hyphenateStyleName.d.ts
- lib/hyphenateStyleName.d.ts.map
- lib/hyphenateStyleName.js
- lib/hyphenateStyleName.js.map
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/makeCssFunction.d.ts
- lib/makeCssFunction.d.ts.map
- lib/makeCssFunction.js
- lib/makeCssFunction.js.map
- lib/makeCustomProperties.d.ts
- lib/makeCustomProperties.d.ts.map
- lib/makeCustomProperties.js
- lib/makeCustomProperties.js.map
- lib/parseStyleProps.d.ts
- lib/parseStyleProps.d.ts.map
- lib/parseStyleProps.js
- lib/parseStyleProps.js.map
- lib/processProps.d.ts
- lib/processProps.d.ts.map
- lib/processProps.js
- lib/processProps.js.map
- lib/sharedConstants.d.ts
- lib/sharedConstants.d.ts.map
- lib/sharedConstants.js
- lib/sharedConstants.js.map
- lib/stringHash.d.ts
- lib/stringHash.d.ts.map
- lib/stringHash.js
- lib/stringHash.js.map
- lib/typePredicates.d.ts
- lib/typePredicates.d.ts.map
- lib/typePredicates.js
- lib/typePredicates.js.map
- lib/types.d.ts
- lib/types.d.ts.map
- lib/types.js
- lib/types.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/nextjs-plugin' only publishes the intended files 1`] = `
"
@jsxstyle/nextjs-plugin
=======================
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/turbopack-loader.d.ts
- lib/turbopack-loader.d.ts.map
- lib/turbopack-loader.js
- lib/turbopack-loader.js.map
- lib/webpack-loader.d.ts
- lib/webpack-loader.d.ts.map
- lib/webpack-loader.js
- lib/webpack-loader.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/preact' only publishes the intended files 1`] = `
"
@jsxstyle/preact
================
- lib/componentFactory.d.ts
- lib/componentFactory.d.ts.map
- lib/componentFactory.js
- lib/componentFactory.js.map
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/types.d.ts
- lib/types.d.ts.map
- lib/types.js
- lib/types.js.map
- lib/useMatchMedia.d.ts
- lib/useMatchMedia.d.ts.map
- lib/useMatchMedia.js
- lib/useMatchMedia.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/react' only publishes the intended files 1`] = `
"
@jsxstyle/react
===============
- lib/JsxstyleCacheProvider.d.ts
- lib/JsxstyleCacheProvider.d.ts.map
- lib/JsxstyleCacheProvider.js
- lib/JsxstyleCacheProvider.js.map
- lib/componentFactory.d.ts
- lib/componentFactory.d.ts.map
- lib/componentFactory.js
- lib/componentFactory.js.map
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/types.d.ts
- lib/types.d.ts.map
- lib/types.js
- lib/types.js.map
- lib/useMatchMedia.d.ts
- lib/useMatchMedia.d.ts.map
- lib/useMatchMedia.js
- lib/useMatchMedia.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/rspack-plugin' only publishes the intended files 1`] = `
"
@jsxstyle/rspack-plugin
=======================
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/loader.d.ts
- lib/loader.d.ts.map
- lib/loader.js
- lib/loader.js.map
- lib/plugin.d.ts
- lib/plugin.d.ts.map
- lib/plugin.js
- lib/plugin.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/solid' only publishes the intended files 1`] = `
"
@jsxstyle/solid
===============
- lib/componentFactory.d.ts
- lib/componentFactory.d.ts.map
- lib/componentFactory.js
- lib/componentFactory.js.map
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/types.d.ts
- lib/types.d.ts.map
- lib/types.js
- lib/types.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/vite-plugin' only publishes the intended files 1`] = `
"
@jsxstyle/vite-plugin
=====================
- README.md
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- package.json
"
`;

exports[`npm publish > '@jsxstyle/webpack-plugin' only publishes the intended files 1`] = `
"
@jsxstyle/webpack-plugin
========================
- README.md
- lib/base64Loader.d.ts
- lib/base64Loader.d.ts.map
- lib/base64Loader.js
- lib/base64Loader.js.map
- lib/index.d.ts
- lib/index.d.ts.map
- lib/index.js
- lib/index.js.map
- lib/loader.d.ts
- lib/loader.d.ts.map
- lib/loader.js
- lib/loader.js.map
- lib/noop.d.ts
- lib/noop.d.ts.map
- lib/noop.js
- lib/noop.js.map
- lib/plugin.d.ts
- lib/plugin.d.ts.map
- lib/plugin.js
- lib/plugin.js.map
- lib/types.d.ts
- lib/types.d.ts.map
- lib/types.js
- lib/types.js.map
- package.json
"
`;
